Mon Aug  4 09:18:36 2003  Joern Thyssen  <jth@gnubg.org>

	* sgf.c, backgammon.h, play.c, import.c
	  count number of successive doubles in move record, clean up
	  linking of initial double and following cube actions
	
Son Aug  3 19:16:13 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (ReturnHits): enlarge buffer.

Sun Aug  3 18:51:30 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintMoveAnalysis): add style to equity column.
	(reported by Albert Silver)

Fri Aug  1 09:01:20 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubgmodule.c: code cleanups. Return 'None' where
	appropriate. Use C loops. Use sequences access instead of
	lists. Return board and others as tuples.

Fri Aug  1 19:49:01 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* Makefile.am - allow environment variable for thread libs
	* acinclude.m4 - mispled synopsis
	* configure.in - allow environment variable for thread libs
	  export THREAD_LIBS="-lc_r" or similar
	  The contents of THREAD_LIBS will be added to the flags for
	  ld 
	  changes thanks to Phil Pennock pdp@nl.demon.net
	
Fri Aug  1 08:43:01 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - off by one error in minimum games check
	
Thu Jul 31 17:59:08 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (write_points): fix typo.
	* gtkboard.c (write_board): swap board when necesary.
	* gtkchequer.c (MoveListShowMove): do not swap sides.
	(fix bugs #4536 and #4513)

Thu Jul 31 11:36:53 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - prevent division by zero when jsds are small. This
          time it actually should do something
	* set.c - missing space in option description
	
Wed Jul 30 09:36:07 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - prevent division by zero when jsds are small
	
Mon Jul 28 21:31:19 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (InitGTK): new menu entry for IDLE (Python).
	* gnubg.c (HandleCommand): strip leading space of python commands.